--- a/style.css
+++ b/style.css
@@ -17,68 +17,6 @@ body {
   /*cursor:none;*/
 }
 
-/*.cursor {
-  position: absolute;
-  width: 10vh;
-  height: 10vh;
-  color: $cream;
-  border-radius: 50%;
-  border: 0.5vh solid;
-  transform: translate(-50%, -50%);
-  z-index: -1;
-  transition: 0.1s ease-out;
-  animation: cursor 0.5s infinite alternate;
-
-  &::after{
-    content:"";
-    position:absolute;
-    width:10vh;
-    height:10vh;
-    top:-4vh;
-    left:-4vh;
-    color:$cream;
-    border-radius:50%;
-    border:4vh solid;
-    opacity:0.25;
-    animation:cursor2 0.5s infinite alternate; 
-  }
-}
-
-@keyframes cursor{
-  0%{
-    transform:scale(1);
-  }
-  100%{
-    transform:scale(0.75);
-  }
-}
-
-@keyframes cursor2{
-  0%{
-    transform:scale(1);
-  }
-  100%{
-    transform:scale(0.4);
-  }
-}*/
-/*.expand {
-  border: 0.5vh solid $yellow;
-  transform: translate(-50%, -50%);
-  animation: cursor3 0.5s infinite alternate;
-}
-
-@keyframes cursor3 {
-  0% {
-    transform: translate(-50%, -50%) scale(1);
-  }
-  50% {
-    transform: translate(-50%, -50%) scale(3);
-  }
-  100% {
-    transform: translate(-50%, -50%) scale(1);
-    opacity: 0;
-  }
-}*/
 #loading {
   position: fixed;
   width: 100vw;
@@ -156,11 +94,13 @@ body {
 }
 
 #bg {
-  position: absolute;
+  /*position: absolute;*/
+  position: relative;
   width: 100vw;
   height: 500vh;
-  background-image: url(https://raw.githubusercontent.com/87penginnouta/Cfood_Cephalopoda/gh-pages/bg/3e74a3f7.png);
+  background-image: url(https://raw.githubusercontent.com/87penginnouta/Cfood_Shrimp/gh-pages/bg/c6fa7e75.png);
   padding: 0;
+  /*padding-top: 65px;*/
   margin: 0;
   top: 0;
   left: 50%;
@@ -168,6 +108,7 @@ body {
   overflow: hidden;
   /*overflow-y: scroll;*/
   opacity: 1;
+  box-shadow: 0 1vh 3vh rgba(0, 0, 0, 0.3);
   animation: bg 3s linear;
 }
 
@@ -182,6 +123,242 @@ body {
     opacity: 1;
   }
 }
+#footer {
+  position: fixed;
+  background-image: url(https://raw.githubusercontent.com/87penginnouta/Cfood_Shrimp/gh-pages/bg/c6fa7e75.png);
+  min-height: 30vh;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: -1;
+  padding: 25px 0;
+  margin: 0;
+  animation: bg 6s;
+}
+
+.footer_bg {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0.75);
+}
+
+.footer_logo {
+  position: absolute;
+  width: 50%;
+  height: 30%;
+  top: 0;
+  left: 50%;
+  transform: translate(-50%);
+  transition: 0.5s;
+}
+
+.foot_img {
+  position: absolute;
+  width: auto;
+  height: 100%;
+  top: 0;
+  left: 50%;
+  transform: translate(-50%);
+}
+.foot_img:hover {
+  animation: footer_logo 1s infinite;
+}
+.foot_img:active {
+  transform: translate(-50%) scale(1.1);
+}
+
+@keyframes footer_logo {
+  0% {
+    transform: translate(-50%) scale(1);
+  }
+  50% {
+    transform: translate(-50%) scale(1.2);
+  }
+  100% {
+    transform: translate(-50%) scale(1);
+  }
+}
+#footer_content {
+  position: fixed;
+  width: 70%;
+  height: 30%;
+  bottom: 5%;
+  left: 50%;
+  transform: translate(-50%);
+  animation: bg 5s;
+}
+
+.link_content {
+  position: absolute;
+  width: 100%;
+  height: 30%;
+  bottom: 30%;
+  left: 50%;
+  transform: translate(-50%);
+  border-top: 0.25vh solid rgba(240, 235, 216, 0.25);
+  border-bottom: 0.25vh solid rgba(240, 235, 216, 0.25);
+}
+
+.link {
+  position: absolute;
+  width: 40%;
+  height: 100%;
+  top: 0;
+}
+
+.link_text {
+  position: absolute;
+  width: 100%;
+  height: 4.5vh;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  text-decoration: none;
+  color: #f0ebd8;
+  font-size: 3vh;
+  letter-spacing: 0.5vh;
+  line-height: 1.5;
+  transition: 0.5s;
+}
+.link_text:hover {
+  color: #ffdb02;
+}
+.link_text:active {
+  font-size: 3.25vh;
+}
+
+.link.l_pre {
+  left: 0%;
+}
+
+.link.l_next {
+  left: 60%;
+}
+
+.link_arrow {
+  position: absolute;
+  width: 3vh;
+  height: 3vh;
+  top: 50%;
+  background: #ffdb02;
+  clip-path: polygon(50% 0, 25% 50%, 50% 100%, 25% 100%, 0% 50%, 25% 0%);
+}
+
+.link_arrow.a_left {
+  left: 75%;
+  transform: translate(-50%, -50%) scalex(-1);
+}
+
+.link_arrow.a_right {
+  left: 25%;
+  transform: translate(-50%, -50%);
+}
+
+.link:hover > .link_arrow.a_right {
+  animation: arrow 2s infinite;
+}
+
+.link:hover > .link_arrow.a_left {
+  animation: arrow2 2s infinite;
+}
+
+@keyframes arrow {
+  0% {
+    left: 25%;
+  }
+  20% {
+    left: 20%;
+  }
+  25% {
+    left: 30%;
+  }
+  50% {
+    left: 20%;
+  }
+  55% {
+    left: 25%;
+  }
+}
+@keyframes arrow2 {
+  0% {
+    left: 75%;
+  }
+  20% {
+    left: 70%;
+  }
+  25% {
+    left: 80%;
+  }
+  50% {
+    left: 70%;
+  }
+  55% {
+    left: 75%;
+  }
+}
+.footer_bottom {
+  position: absolute;
+  width: 100%;
+  height: 20%;
+  left: 50%;
+  bottom: 0%;
+  transform: translate(-50%);
+}
+
+.copyright {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 30%;
+  left: 0;
+  color: rgba(240, 235, 216, 0.25);
+  font-size: 1vh;
+}
+
+.sns_content {
+  position: absolute;
+  width: 30%;
+  height: 100%;
+}
+
+.sns_content.s_footer {
+  top: 0;
+  right: 0;
+}
+
+.sns_content.s_menu {
+  top: 85%;
+  left: 35%;
+}
+
+.sns_btn {
+  position: absolute;
+  width: 7vh;
+  height: 7vh;
+  top: 0;
+  background: rgba(240, 235, 216, 0.25);
+  border-radius: 50%;
+  transition: 0.5s;
+}
+.sns_btn:hover {
+  background: #ffdb02;
+}
+.sns_btn:active {
+  transform: scale(1.1);
+}
+
+.sns_btn.s_fb {
+  right: 25%;
+}
+
+.sns_btn.s_ig {
+  right: 0;
+}
+
 #section1,
 #section2,
 #section3,
@@ -373,7 +550,7 @@ body {
   width: 100%;
   height: 12.5%;
   text-align: center;
-  background-image: url(https://raw.githubusercontent.com/87penginnouta/Cfood_Cephalopoda/gh-pages/bg/3e74a3f7.png);
+  background-image: url(https://raw.githubusercontent.com/87penginnouta/Cfood_Shrimp/gh-pages/bg/c6fa7e75.png);
   animation: bg 5s;
 }
 
@@ -473,6 +650,85 @@ body {
   color: #f0ebd8;
 }
 
+#buttons_all {
+  position: fixed;
+  width: 7vh;
+  height: 7vh;
+  bottom: 3%;
+  right: 1%;
+  animation: bg 5s;
+}
+
+#gotop {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: rgba(240, 235, 216, 0.25);
+  top: 10%;
+  /*這個要開不然還沒滾卷軸就會出現*/
+  display: none;
+  left: 50%;
+  transform: translate(-50%);
+  border-radius: 50%;
+  box-shadow: 0 0 3vh rgba(0, 0, 0, 0.15);
+}
+#gotop:hover {
+  background: #f0ebd8;
+  transition: 0.5s;
+}
+#gotop:active {
+  background: #f0ebd8;
+  transition: 0.5s;
+  transform: translate(-50%) scale(1.2);
+}
+
+.btn_img {
+  position: absolute;
+  width: 50%;
+  height: auto;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  opacity: 0.25;
+}
+
+.down {
+  transform: translate(-50%, -50%) scaley(-1);
+}
+
+#godown_content {
+  position: absolute;
+  width: 20%;
+  height: 12.5%;
+  bottom: 2.5%;
+  left: 50%;
+  transform: translate(-50%);
+  animation: bg 5s;
+}
+
+.godown {
+  position: fixed;
+  width: 7vh;
+  height: 7vh;
+  top: 0;
+  left: 50%;
+  transform: translate(-50%);
+  border-radius: 50%;
+  background: rgba(240, 235, 216, 0.25);
+  animation: godown 1.5s infinite;
+}
+
+@keyframes godown {
+  0%, 20%, 50%, 80%, 100% {
+    top: 0;
+  }
+  40% {
+    top: 30%;
+  }
+  60% {
+    top: 15%;
+  }
+}
 .fairy_content {
   position: absolute;
 }
@@ -491,6 +747,32 @@ body {
   right: 0;
 }
 
+.fairy_open {
+  position: absolute;
+  width: auto;
+  height: 80%;
+  top: 0;
+  right: 0;
+  transition: 0.5s;
+}
+.fairy_open:hover {
+  animation: fairy 2s infinite;
+}
+
+@keyframes fairy {
+  0% {
+    transform: rotate(0deg);
+  }
+  20% {
+    transform: rotate(2deg);
+  }
+  50% {
+    transform: rotate(-2deg);
+  }
+  70% {
+    transform: rotate(0deg);
+  }
+}
 .fairy_talk {
   position: absolute;
   width: 50%;
@@ -528,9 +810,10 @@ body {
 .prepare,
 .food {
   position: absolute;
-  left: 50%;
+  /*left: 50%;*/
   top: 40%;
-  transform: translate(-50%);
+  /*transform: translate(-50%);*/
+  left: 22.5%;
 }
 
 .who {
@@ -706,7 +989,7 @@ body {
   width: 50%;
   margin: auto;
   overflow: hidden;
-  background-image: url(https://raw.githubusercontent.com/87penginnouta/Cfood_Cephalopoda/gh-pages/bg/3e74a3f7.png);
+  background-image: url(https://raw.githubusercontent.com/87penginnouta/Cfood_Shrimp/gh-pages/bg/c6fa7e75.png);
   border-radius: 1%;
   padding: 5% 5%;
 }
@@ -853,7 +1136,7 @@ body {
   top: 40%;
   left: 0;
   background: rgba(0, 0, 0, 0.3);
-  border-radius: 50% 50% 0 0 /100% 100% 0 0;
+  border-radius: 50% 50% 0 0/100% 100% 0 0;
 }
 
 .food_guess {
@@ -873,11 +1156,11 @@ body {
 
 .modal_btn:hover,
 .modal_btn:focus {
-  background: #2ecc71;
+  background: #ab8e37;
 }
 
 .modal_btn:active {
-  background: #27ae60;
+  background: #826611;
 }
 
 .ani,
@@ -1078,7 +1361,7 @@ body {
 /*-----card-----*/
 .card {
   position: absolute;
-  width: 30%;
+  width: 25%;
   height: 100%;
   top: 0;
   transform: translate(-50%);
@@ -1090,18 +1373,23 @@ body {
 }
 
 .card.card1 {
-  left: 12.5%;
-  background-image: url(https://raw.githubusercontent.com/87penginnouta/Cfood_Cephalopoda/gh-pages/pick/1.png);
+  left: 10%;
+  background-image: url(https://raw.githubusercontent.com/87penginnouta/Cfood_Shrimp/gh-pages/pick/1.png);
 }
 
 .card.card2 {
-  left: 50%;
-  background-image: url(https://raw.githubusercontent.com/87penginnouta/Cfood_Cephalopoda/gh-pages/pick/2.png);
+  left: 40%;
+  background-image: url(https://raw.githubusercontent.com/87penginnouta/Cfood_Shrimp/gh-pages/pick/2.png);
 }
 
 .card.card3 {
-  left: 87.5%;
-  background-image: url(https://raw.githubusercontent.com/87penginnouta/Cfood_Cephalopoda/gh-pages/pick/3.png);
+  left: 70%;
+  background-image: url(https://raw.githubusercontent.com/87penginnouta/Cfood_Shrimp/gh-pages/pick/3.png);
+}
+
+.card.card4 {
+  left: 100%;
+  background-image: url(https://raw.githubusercontent.com/87penginnouta/Cfood_Shrimp/gh-pages/pick/4.png);
 }
 
 .card_info {
@@ -1130,15 +1418,19 @@ body {
 }
 
 .card_info.c_info1:before {
-  background-image: url(https://raw.githubusercontent.com/87penginnouta/Cfood_Cephalopoda/gh-pages/pick/1.png);
+  background-image: url(https://raw.githubusercontent.com/87penginnouta/Cfood_Shrimp/gh-pages/pick/1.png);
 }
 
 .card_info.c_info2:before {
-  background-image: url(https://raw.githubusercontent.com/87penginnouta/Cfood_Cephalopoda/gh-pages/pick/2.png);
+  background-image: url(https://raw.githubusercontent.com/87penginnouta/Cfood_Shrimp/gh-pages/pick/2.png);
 }
 
 .card_info.c_info3:before {
-  background-image: url(https://raw.githubusercontent.com/87penginnouta/Cfood_Cephalopoda/gh-pages/pick/3.png);
+  background-image: url(https://raw.githubusercontent.com/87penginnouta/Cfood_Shrimp/gh-pages/pick/3.png);
+}
+
+.card_info.c_info4:before {
+  background-image: url(https://raw.githubusercontent.com/87penginnouta/Cfood_Shrimp/gh-pages/pick/4.png);
 }
 
 .card:hover .card_info,
@@ -1173,7 +1465,7 @@ body {
   height: 100%;
 }
 
-#slider input[type="radio"] {
+#slider input[type=radio] {
   display: none;
 }
 
@@ -1375,54 +1667,6 @@ body {
     margin: 0 auto;
   }
 }*/
-.link_content {
-  position: absolute;
-  width: 70%;
-  height: 9vh;
-  bottom: 2.5%;
-  left: 50%;
-  border-radius: 30%;
-  transform: translate(-50%);
-  background: rgba(0, 0, 0, 0.15);
-  box-shadow: 0 0 3vh rgba(0, 0, 0, 0.15);
-  overflow: hidden;
-}
-
-.link a {
-  position: absolute;
-  width: 40%;
-  height: 100%;
-  top: 0;
-  text-align: center;
-  text-decoration: none;
-  color: #f0ebd8;
-  font-size: 3vh;
-  letter-spacing: 0.5vh;
-  line-height: 3;
-  transition: 0.5s;
-}
-.link a:active {
-  font-size: 3.5vh;
-}
-
-.link.l_pre a {
-  left: 0%;
-}
-.link.l_pre a:hover {
-  background-image: url(https://raw.githubusercontent.com/87penginnouta/Cfood_enter/master/bg/bdab3c87.png);
-  color: rgba(0, 0, 0, 0.3);
-  transition: 0.5s;
-}
-
-.link.l_next a {
-  left: 60%;
-}
-.link.l_next a:hover {
-  background-image: url(https://raw.githubusercontent.com/87penginnouta/Cfood_Shellfish/gh-pages/bg/905fd457.png);
-  color: rgba(0, 0, 0, 0.3);
-  transition: 0.5s;
-}
-
 /*-----menu-----*/
 #menu {
   position: fixed;
@@ -1433,30 +1677,119 @@ body {
   top: 0;
   border-right: 0.25vh solid #f0ebd8;
   -webkit-transform: translateZ(0);
+  animation: bg 5s;
 }
 
 .menu_bg {
   position: fixed;
   /*background: $cream;*/
-  /*background-image: url(https://images.plurk.com/4G3rfaZfxPHS1G1c821qzq.png);*/
-  background-image: url(https://raw.githubusercontent.com/87penginnouta/Cfood_Cephalopoda/gh-pages/bg/3e74a3f7.png);
+  background-image: url(https://raw.githubusercontent.com/87penginnouta/Cfood_enter/master/bg/bdab3c87.png);
+  /*background-image: url(https://raw.githubusercontent.com/87penginnouta/Cfood_Cephalopoda/gh-pages/bg/3e74a3f7.png);*/
   width: 120vw;
   height: 100vh;
   left: -150vw;
-  /*top: -45vh;*/
   top: 0;
+  box-shadow: 0 0 5vh rgba(0, 0, 0, 0.3);
   transition: 1s;
 }
 .menu_bg::before {
   content: "";
   position: absolute;
   width: 100%;
-  /*height: 30%;*/
   height: 100%;
-  /*top: 70%;*/
   top: 0;
   left: 0;
-  background: rgba(0, 0, 0, 0.15);
+  background: rgba(0, 0, 0, 0.3);
+}
+
+.menu_link_content {
+  position: absolute;
+  width: 40%;
+  height: 78%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  list-style: none;
+}
+
+.menu_web {
+  position: absolute;
+  width: 100%;
+  height: 13%;
+  left: 0;
+  text-decoration: none;
+  border-top: 0.25vh solid rgba(240, 235, 216, 0.25);
+  letter-spacing: 0.5vh;
+  transition: 0.5s;
+}
+
+.m_hover:hover {
+  background: rgba(240, 235, 216, 0.25);
+}
+
+.menu_web.w1 {
+  top: 0;
+}
+
+.menu_web.w2 {
+  top: 13%;
+}
+
+.menu_web.w3 {
+  top: 26%;
+}
+
+.menu_web.w4 {
+  top: 39%;
+}
+
+.menu_web.w5 {
+  top: 52%;
+}
+
+.menu_web.w6 {
+  top: 65%;
+}
+
+.menu_web.w7 {
+  top: 78%;
+}
+
+.menu_web.w_line {
+  top: 91%;
+}
+
+.menu_link,
+.m_span {
+  position: absolute;
+  left: 0;
+  top: 50%;
+  transform: translatey(-50%);
+}
+
+.menu_link {
+  color: #f0ebd8;
+  font-size: 3vh;
+  padding-left: 30%;
+}
+
+.menu_link.m_big {
+  font-size: 4vh;
+}
+
+.m_span {
+  color: #ffdb02;
+  font-size: 2vh;
+  padding-left: 5%;
+}
+
+.menu_img {
+  position: absolute;
+  width: auto;
+  height: 40%;
+  top: 65%;
+  left: 75%;
+  transform: scalex(-1);
 }
 
 .hamburger {
@@ -1560,104 +1893,8 @@ body {
   left: 7.5vh;
   transform: translate(-50%);
   text-align: center;
-  /*font-family: 'Barlow Condensed', sans-serif;*/
-  /*font-family: 'Teko', sans-serif;*/
-  font-family: "Monda", sans-serif;
+  /*font-family: "Monda", sans-serif;*/
   color: #f0ebd8;
   font-size: 1vh;
-}
-
-/*-----menu_open-----*/
-/*#menu_link,
-.animal_link {
-  position: absolute;
-  transform: translate(-50%, -50%);
-  list-style: none;
-}*/
-/*#menu_link {
-  left: 50%;
-  top: 70%;
-}*/
-/*.animal_link {
-  top: 30%;
-}*/
-/*.animal_link.a1 {
-  left: 35%;
-}*/
-/*.animal_link.a2 {
-  left: 65%;
-}*/
-.menu_top {
-  position: absolute;
-  top: 5%;
-  left: 0;
-  width: 100%;
-  height: 50%;
-}
-
-.menu_bottom {
-  position: absolute;
-  top: 40%;
-  left: 0;
-  width: 100%;
-  height: 50%;
-}
-
-a {
-  text-decoration: none;
-}
-
-.fb,
-.ig {
-  position: absolute;
-  width: 8vh;
-  height: 8vh;
-  top: 85%;
-  padding-left: 3vh;
-}
-
-.fb {
-  left: 60%;
-}
-
-.ig {
-  left: 65%;
-}
-
-.about {
-  position: absolute;
-  width: 20%;
-  height: 8%;
-  top: 85%;
-  left: 37%;
-  border-radius: 50vh;
-  background-image: url(https://images.plurk.com/4G3rfaZfxPHS1G1c821qzq.png);
-  color: #7eabb1;
-  font-family: "微軟正黑體";
-  font-size: 3vh;
-  font-weight: 700;
-  text-align: right;
-  line-height: 9vh;
-  letter-spacing: 0.5vh;
-  box-shadow: 2vh 2vh 5vh rgba(0, 0, 0, 0.15);
-  transition: 0.25s;
-}
-.about:hover {
-  box-shadow: 0vh 0vh 0vh rgba(0, 0, 0, 0.15);
-}
-
-@keyframes up {
-  0% {
-    transform: translatey(1.5vh);
-  }
-}
-.boat_menu {
-  position: absolute;
-  width: 30vh;
-  height: 20vh;
-  top: 75%;
-  left: 30%;
-  background-image: url("https://raw.githubusercontent.com/87penginnouta/Cfood_enter/master/boat.png");
-  background-size: cover;
-  animation: up 2s infinite alternate;
+  animation: bg 5s;
 }
