--- a/rwd.css
+++ b/rwd.css
@@ -1,15 +1,12 @@
-@media screen and (max-width: 1200px) {
+@media (max-width: 1200px) {
 
-    .open_title {
-        font-size: 6vh;
-    }
-
-    .open_sub{
-        font-size: 3vh;
+    .fairy_content.f1 {
+        left: 55%;
     }
 
     .who {
-        width: 55%;
+        /* width: 55%; */
+        width: 70%;
     }
 
     .fairy_content.f2 {
@@ -18,59 +15,80 @@
     }
 
     .fairy_bubble {
-        width: 120%;
+        /* width: 120%; */
+        width: 150%;
     }
 
     .talk_word {
-        font-size: 1.8vh;
+        width: 150%;
     }
 
     .pick {
-        width: 67.5%;
+        /* width: 67.5%; */
+        width: 70%;
+    }
+
+    .pick_area {
+        width: 49%;
+    }
+
+    .pick_img {
+        height: 60%;
     }
 
     .prepare {
-        width: 67.5%;
+        /* width: 67.5%; */
+        width: 70%;
+        height: 55%;
+        flex-wrap: wrap;
+    }
+
+    .prepare_img {
+        width: 40%;
+        height: auto;
+    }
+
+    .prepare_extra {
+        /* margin-top: 20px; */
+        display: none;
     }
 
     .food {
-        width: 67.5%;
+        /* width: 67.5%; */
+        width: 70%;
     }
 
     .link_text {
-        font-size: 2.25vh;
-    }
-
-    .link_text:active {
-        font-size: 2.75vh;
-    }
-
-    .link_arrow {
-        width: 2vh;
-        height: 2vh;
-        top: 45%;
+        font-size: 1.1rem;
     }
 
     .modal__inner {
-        width: 72.5%;
-        height: 90%;
+        /* width: 72.5%; */
+        width: 75%;
+        /* height: 90%; */
+        height: 80%;
         box-sizing: border-box;
     }
 
-    .sns_content.s_menu {
-        width: 17.5%;
+    .ani_img {
+        width: auto;
+        height: 50%;
+    }
+
+    .ani {
+        width: 60%;
+    }
+
+    .af {
+        height: 50%;
+    }
+
+    .menu_bg{
+        height: 100dvh;
     }
 }
 
-/* @media screen and (max-width: 768px) {
-    .modal__inner {
-        width: 80%;
-        height: 90%;
-        box-sizing: border-box;
-    }
-}
-
-@media screen and (max-width: 900px) {
+/*@media screen and (max-width: 900px) {
 
     #slide1:checked~#controls label:nth-child(2),
     #slide2:checked~#controls label:nth-child(3),
@@ -88,3 +106,263 @@
         margin: 0 auto;
     }
 } */
+
+@media (max-width: 540px) {
+    #bg {
+        width: 100vw;
+        height: 500vh;
+    }
+
+    #progress {
+        display: none;
+    }
+
+    .open_title {
+        width: 80%;
+        left: 7.5%;
+        top: 15%;
+        font-size: 34px;
+    }
+
+    .open_sub {
+        font-size: 18px;
+    }
+
+    .fairy_content.f1 {
+        top: 30%;
+        left: 25%;
+        height: 20%;
+    }
+
+    .open_content {
+        left: 7.5%;
+        width: 90%;
+        top: 50%;
+        font-size: 15px;
+    }
+
+    .fairy_content.f2 {
+        width: 90%;
+        margin-top: -15%;
+    }
+
+    .fairy_bubble {
+        width: 110%;
+    }
+
+    .talk_word {
+        width: 110%;
+        font-size: 15px;
+    }
+
+    .compare_img {
+        width: 80%;
+        height: auto;
+    }
+
+    .info {
+        left: 7.5%;
+        font-size: 30px;
+    }
+
+    .info::before {
+        display: none;
+    }
+
+    .content {
+        font-size: 15px;
+    }
+
+    .who,
+    .pick,
+    .prepare,
+    .food {
+        width: 85%;
+        height: 60%;
+        left: 7.5%;
+        top: 35%;
+    }
+
+    .modal_card {
+        width: 45%;
+        height: 30%;
+    }
+
+    .pick {
+        align-content: flex-start;
+    }
+
+    .pick_area {
+        width: 100%;
+        height: 23%;
+        margin: 10px 0;
+    }
+
+    .pick_title {
+        font-size: 15px;
+    }
+
+    .prepare_content {
+        font-size: 15px;
+    }
+
+    .prepare {
+        flex-wrap: wrap;
+        align-content: flex-start;
+    }
+
+    .prepare_img {
+        width: auto;
+        height: 45%;
+        margin: 10px;
+    }
+
+    .prepare_extra {
+        /* width: 30%; */
+        /* left: 72%;
+        top: 25%;
+        font-size: 18px; */
+        display: none;
+    }
+
+    .food {
+        height: 50%;
+    }
+
+    .modal_food_card {
+        width: 30%;
+        height: 45%;
+    }
+
+    .food_guess {
+        font-size: 15px;
+    }
+
+    #footer_content {
+        width: 90%;
+    }
+
+    .footer_logo {
+        width: 100%;
+    }
+
+    .foot_img {
+        height: 50%;
+    }
+
+    .copyright {
+        margin-top: -30px;
+    }
+
+    .link_content {
+        display: none;
+    }
+
+    .modal__inner {
+        width: 80%;
+        height: 70%;
+    }
+
+    .modal__close {
+        width: 36px;
+        height: 36px;
+        right: 10%;
+        top: 30px;
+    }
+
+    .ani_line.line_top,
+    .ani_line.line_bottom,
+    .ani_category.ca_bottom,
+    .ani_img {
+        display: none;
+    }
+
+    .ani_category.ca_top {
+        top: 16px;
+        left: 7.5%;
+    }
+
+    .ani {
+        width: 100%;
+        margin-top: 60px;
+        font-size: 15px;
+    }
+
+    .ani_title {
+        font-size: 34px;
+        line-height: 250%;
+    }
+
+    .ani_sub {
+        font-size: 18px;
+    }
+
+    .modal__inner_food {
+        width: 80%;
+    }
+
+    .sns_btn {
+        background-color: #f0ebd8;
+    }
+
+    #toggle {
+        width: 10vh;
+        height: 10vh;
+        top: 5vh;
+        left: 93%;
+        transform: translate(-50%, -50%);
+    }
+
+    #menu {
+        width: 100vw;
+        height: 10vh;
+        left: 0;
+        top: 0;
+    }
+
+    .menu_bg {
+        background-image: url("./img/bg/loading_bg.jpg");
+        width: 110vw;
+        /* width: 105vw; */
+        /* height: 120vh; */
+        height: 120dvh;
+        left: 0vw;
+        /* top: -150vh; */
+        top:-150dvh;
+        transition: 1s;
+    }
+
+    .hamburger {
+        width: 10vh;
+        height: 10vh;
+        top: 50%;
+        left: 90%;
+        transform: translate(-50%, -50%);
+    }
+
+    #toggle:checked~.menu_bg {
+        /* transform: translateY(140vh); */
+        transform: translateY(140dvh);
+        transition: 1s;
+    }
+
+    .menu_link_content {
+        width: 100%;
+        height: 60%;
+    }
+
+    .menu_link,
+    .menu_link.m_big {
+        font-size: 26px;
+    }
+
+    .m_span {
+        font-size: 12px;
+    }
+
+    .sns_content.s_menu {
+        width: 40%;
+        left: 5%;
+        top: 80%;
+    }
+}
